--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,7 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css" />
+		<link rel="stylesheet" href="./css/main.min.css">
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 
@@ -230,31 +231,31 @@
 				</div>
 				<div>
 					<p class="title"> приєднуйтесь </p>
-					<ul class="social-list list">
-						<li class="social">
-							<a href="" class="social-link link">
-								<svg class="social-icon" width="20" height="20">
+					<ul class="social list">
+						<li class="social__item">
+							<a href="" class="social__link link">
+								<svg class="social__icon" width="20" height="20">
 									<use href="./images/sprite.svg#icon-instagram"></use>
 								</svg>
 							</a>
 						</li>
-						<li class="social">
-							<a href="" class="social-link link">
-								<svg class="social-icon" width="20" height="20">
+						<li class="social__item">
+							<a href="" class="social__link link">
+								<svg class="social__icon" width="20" height="20">
 									<use href="./images/sprite.svg#icon-twitter"></use>
 								</svg>
 							</a>
 						</li>
-						<li class="social">
-							<a href="" class="social-link link">
-								<svg class="social-icon" width="20" height="20">
+						<li class="social__item">
+							<a href="" class="social__link link">
+								<svg class="social__icon" width="20" height="20">
 									<use href="./images/sprite.svg#icon-facebook"></use>
 								</svg>
 							</a>
 						</li>
-						<li class="social">
-							<a href="" class="social-link link">
-								<svg class="social-icon" width="20" height="20">
+						<li class="social__item">
+							<a href="" class="social__link link">
+								<svg class="social__icon" width="20" height="20">
 									<use href="./images/sprite.svg#icon-linkedin"></use>
 								</svg>
 							</a>
