--- a/portfolio.html
+++ b/portfolio.html
@@ -17,34 +17,32 @@
 	</head>
 
 	<body>
-		<header class="page-header spacing">
-			<div class="container page-header-container">
-				<nav class="page-header-nav">
-					<a href="./index.html" class="accent link logo">Web<span class="logo-bl">Studio</span></a>
-					<ul class="site-nav list">
+		<header class="page-header">
+			<div class="container page-header__container">
+				<nav class="menu">
+					<a href="./index.html" class="logo__accent link logo">Web<span class="logo__header">Studio</span></a>
+					<ul class="menu__list list">
 						<li>
-							<a href=" ./index.html" class="link site-nav-link">Студія</a>
+							<a href=" ./index.html" class="link  menu__link">Студія</a>
 						</li>
 						<li>
-							<a href="./portfolio.html" class="link current site-nav-link">Портфоліо</a>
+							<a href="./portfolio.html" class="link current menu__link">Портфоліо</a>
 						</li>
-						<li><a href="#" class="link site-nav-link">Контакти</a></li>
+						<li><a href="#" class="link menu__link">Контакти</a></li>
 					</ul>
 				</nav>
-				<ul class="auth-nav list">
+				<ul class="header-contact list">
 					<li>
-						<a href="mailto:info@devstudio.com" class="link auth-nav-link"
-							><svg aria-label="піктограма поштового конверта" class="header-img" width="16" height="12">
-								<use href="./images/sprite.svg#icon-envelope"></use></svg
-							>info@devstudio.com</a
-						>
+						<a href="mailto:info@devstudio.com" class="link header-contact__link"><svg
+								aria-label="піктограма поштового конверта" class="header-img" width="16" height="12">
+								<use href="./images/sprite.svg#icon-envelope"></use>
+							</svg>info@devstudio.com</a>
 					</li>
 					<li>
-						<a href="tel:+380961111111" class="link auth-nav-link"
-							><svg aria-label="піктограма поштового конверта" class="header-img" width="10" height="16">
-								<use href="./images/sprite.svg#icon-smartphone"></use></svg
-							>+38 096 111 11 11</a
-						>
+						<a href="tel:+380961111111" class="link header-contact__link"><svg
+								aria-label="піктограма поштового конверта" class="header-img" width="10" height="16">
+								<use href="./images/sprite.svg#icon-smartphone"></use>
+							</svg>+38 096 111 11 11</a>
 					</li>
 				</ul>
 			</div>
@@ -210,51 +208,53 @@
 		</main>
 
 		<footer class="page-footer">
-			<div class="container footer-container">
+			<div class="container page-footer__container">
 				<div>
-					<a href="./index.html" class="accent link logo">Web<span class="logo-wh">Studio</span></a>
-					<address class="footer-address link">
-						<ul class="footer-list list">
+					<a href="./index.html" class="logo__accent link logo">Web<span class="logo__footer">Studio</span></a>
+					<address class="footer-address">
+						<ul class="footer-address__list list">
 							<li>
 								<a href="https://goo.gl/maps/7BKJfYko6wZTLQA66 " target="_blank"
-									rel="noreferer noopener nofollow" class="link">
+									rel="noreferer noopener nofollow" class="link footer-address__link">
 									м. Київ, пр-т Лесі Українки, 26</a>
 							</li>
 							<li class="addres-item">
-								<a href="mailto:info@devstudio.com" class="link addres">info@devstudio.com</a>
+								<a href="mailto:info@devstudio.com"
+									class="link footer-address__contact footer-address__link">info@devstudio.com</a>
 							</li>
 							<li class="addres-item">
-								<a href="tel:+380961111111" class="link addres">+38 096 111 11 11</a>
+								<a href="tel:+380961111111" class="link footer-address__contact footer-address__link">+38 096
+									111 11 11</a>
 							</li>
 						</ul>
 					</address>
 				</div>
 				<div>
-					<p class="title"> приєднуйтесь </p>
+					<p class="title page-footer__title"> приєднуйтесь </p>
 					<ul class="social list">
 						<li class="social__item">
-							<a href="" class="social__link link">
+							<a href="" class="social__link page-footer__social link">
 								<svg class="social__icon" width="20" height="20">
 									<use href="./images/sprite.svg#icon-instagram"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="social__item">
-							<a href="" class="social__link link">
+							<a href="" class="social__link page-footer__social link">
 								<svg class="social__icon" width="20" height="20">
 									<use href="./images/sprite.svg#icon-twitter"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="social__item">
-							<a href="" class="social__link link">
+							<a href="" class="social__link page-footer__social link">
 								<svg class="social__icon" width="20" height="20">
 									<use href="./images/sprite.svg#icon-facebook"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="social__item">
-							<a href="" class="social__link link">
+							<a href="" class="social__link page-footer__social link">
 								<svg class="social__icon" width="20" height="20">
 									<use href="./images/sprite.svg#icon-linkedin"></use>
 								</svg>
@@ -264,12 +264,12 @@
 				</div>
 		
 				<form class="form-footer">
-					<p class="title">Підпишіться на розсилку</p>
-					<span class="form-footer-container">
+					<p class="title page-footer__title">Підпишіться на розсилку</p>
+					<span class="form-footer__container">
 						<label>
-							<input type="email" name="email" class="form-footer-input" placeholder="E-mail" />
+							<input type="email" name="email" class="form-footer__input" placeholder="E-mail" />
 						</label>
-						<button type="submit" class="button form-footer-button">Підписатися<svg class="form-footer-icon"
+						<button type="submit" class="button form-footer__button">Підписатися<svg class="form-footer-icon"
 								width="24" height="24">
 								<use href=".//images/sprite.svg#icon-send"></use>
 							</svg>
