--- a/portfolio.html
+++ b/portfolio.html
@@ -52,24 +52,24 @@
 			<section class="portfolio section">
 				<div class="container">
 					<h1 class="visually-hidden">Галерея</h1>
-					<ul class="list portfolio-filtr">
-						<li><button type="button" class="portfolio-button">Усі</button></li>
+					<ul class="list portfolio__filtr">
+						<li><button type="button" class="portfolio__button">Усі</button></li>
 						<li>
-							<button type="button" class="portfolio-button">Веб-сайти</button>
+							<button type="button" class="portfolio__button">Веб-сайти</button>
 						</li>
 						<li>
-							<button type="button" class="portfolio-button">Додатки</button>
+							<button type="button" class="portfolio__button">Додатки</button>
 						</li>
 						<li>
-							<button type="button" class="portfolio-button">Дизайн</button>
+							<button type="button" class="portfolio__button">Дизайн</button>
 						</li>
 						<li>
-							<button type="button" class="portfolio-button">Маркетинг</button>
+							<button type="button" class="portfolio__button">Маркетинг</button>
 						</li>
 					</ul>
-					<ul class="list gallery-list item-portfolio">
-						<li>
-							<a href="" class="portfolio-link link">
+					<ul class="list gallery">
+						<li class="gallery__item">
+							<a href="" class="gallery__link link">
 								<div class="thumb">
 								<img
 									src="./images/gallery/techno.jpg"
@@ -80,70 +80,70 @@
 									відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
 								</p>
 								</div>
-								<div class="description-gallery">
-									<h2 class="gallery">Технокряк</h2>
-									<p class="portfolio-paragraph">Веб-сайт</p>
+								<div class="gallery__description">
+									<h2 class="gallery__title">Технокряк</h2>
+									<p class="gallery__text">Веб-сайт</p>
 								</div>
 							</a>
 						</li>
-						<li>
-							<a href="" class="portfolio-link link">
+						<li class="gallery__item">
+							<a href="" class="gallery__link link">
 								<div class="thumb">
 								<img src="./images/gallery/poster.jpg" alt="Фото баскетболістів з м'ячем." width="370" />
 								<p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
 									відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
 								</p>
 							</div>
-								<div class="description-gallery">
-									<h2 class="gallery">Постер New Orlean vs Golden Star</h2>
-									<p class="portfolio-paragraph">Дизайн</p>
+								<div class="gallery__description">
+									<h2 class="gallery__title">Постер New Orlean vs Golden Star</h2>
+									<p class="gallery__text">Дизайн</p>
 								</div>
 							</a>
 						</li>
-						<li>
-							<a href="" class="portfolio-link link">
+						<li class="gallery__item">
+							<a href="" class="gallery__link link">
 								<div class="thumb">
 								<img src="./images/gallery/restaurant.jpg" alt="фото логотипа рибного ресторану." width="370" />
 								<p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
 									відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
 								</p>
 							</div>
-								<div class="description-gallery">
-									<h2 class="gallery">Ресторан Seafood</h2>
-									<p class="portfolio-paragraph">Додаток</p>
+								<div class="gallery__description">
+									<h2 class="gallery__title">Ресторан Seafood</h2>
+									<p class="gallery__text">Додаток</p>
 								</div>
 							</a>
 						</li>
-						<li>
-							<a href="" class="portfolio-link link">
+						<li class="gallery__item">
+							<a href="" class="gallery__link link">
 								<div class="thumb">
 								<img src="./images/gallery/project.jpg" alt=" Фото навушників." width="370" />
 							<p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
 								відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
 							</p>
 						</div>
-								<div class="description-gallery">
-									<h2 class="gallery">Проєкт Prime</h2>
-									<p class="portfolio-paragraph">Маркетинг</p>
+								<div class="gallery__description">
+									<h2 class="gallery__title">Проєкт Prime</h2>
+									<p class="gallery__text">Маркетинг</p>
 								</div>
 							</a>
 						</li>
-						<li>
-							<a href="" class="portfolio-link link">
+						<li class="gallery__item">
+							<a href="" class="gallery__link link">
 								<div class="thumb">
 								<img src="./images/gallery/project_1.jpg" alt="Фото боксів з надписами." width="370" />
 								<p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
 									відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
 								</p>
 							</div>
-								<div class="description-gallery">
-									<h2 class="gallery">Проєкт Boxes</h2>
-									<p class="portfolio-paragraph">Додаток</p>
+								<div class="gallery__description">
+									<h2 class="gallery__title">Проєкт Boxes</h2>
+									<p class="gallery__text">Додаток</p>
 								</div>
 							</a>
 						</li>
-						<li>
-							<a href="" class="portfolio-link link">
+						<li class="gallery__item">
+							<a href="" class="gallery__link link">
 								<div class="thumb">
 								<img
 									src="./images/gallery/inspiration.jpg"
@@ -154,51 +154,51 @@
 									відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
 								</p>
 								</div>
-								<div class="description-gallery">
-									<h2 class="gallery">Inspiration has no Borders</h2>
-									<p class="portfolio-paragraph">Веб-сайт</p>
+								<div class="gallery__description">
+									<h2 class="gallery__title">Inspiration has no Borders</h2>
+									<p class="gallery__text">Веб-сайт</p>
 								</div>
 							</a>
 						</li>
-						<li>
-							<a href="" class="portfolio-link link">
+						<li class="gallery__item">
+							<a href="" class="gallery__link link">
 								<div class="thumb">
 								<img src="./images/gallery/edition.jpg" alt="Фото журнала." width="370" />
 								<p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
 									відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
 								</p>
 								</div>
-								<div class="description-gallery">
-									<h2 class="gallery">Видання Limited Edition</h2>
-									<p class="portfolio-paragraph">Дизайн</p>
+								<div class="gallery__description">
+									<h2 class="gallery__title">Видання Limited Edition</h2>
+									<p class="gallery__text">Дизайн</p>
 								</div>
 							</a>
 						</li>
-						<li>
-							<a href="" class="portfolio-link link">
+						<li class="gallery__item">
+							<a href="" class="gallery__link link">
 								<div class="thumb">
 								<img src="./images/gallery/project_2.jpg" alt="Фото з написом." width="370" />
 							<p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
 								відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
 							</p>
 							</div>
-								<div class="description-gallery">
-									<h2 class="gallery">Проєкт LAB</h2>
-									<p class="portfolio-paragraph">Маркетинг</p>
+								<div class="gallery__description">
+									<h2 class="gallery__title">Проєкт LAB</h2>
+									<p class="gallery__text">Маркетинг</p>
 								</div>
 							</a>
 						</li>
-						<li>
-							<a href="" class="portfolio-link link">
+						<li class="gallery__item">
+							<a href="" class="gallery__link link">
 								<div class="thumb">
 								<img src="./images/gallery/growing.jpg" alt="Фото людини, яка працює за ноубуком." width="370" />
 								<p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
 									відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
 								</p>
 								</div>
-								<div class="description-gallery">
-									<h2 class="gallery">Growing Business</h2>
-									<p class="portfolio-paragraph">Додаток</p>
+								<div class="gallery__description">
+									<h2 class="gallery__title">Growing Business</h2>
+									<p class="gallery__text">Додаток</p>
 								</div>
 							</a>
 						</li>
