--- a/index.html
+++ b/index.html
@@ -437,56 +437,56 @@
 						<use href="./images//sprite.svg#icon-close"></use>
 					</svg>
 				</button>
-				<p class="modal-form-title">Залиште свої дані, ми вам передзвонимо</p>
+				<p class="modal-form__title">Залиште свої дані, ми вам передзвонимо</p>
 				<form class="modal-form">
-					<lable class="modal-form-field">
+					<lable class="modal-form__field">
 						Ім'я
-						<span class="modal-form-container">
-							<input type="text" class="modal-form-imput" required pattern="[a-zA-Zа-яА-ЯіІїЇ'’]+" name="user_name" />
-							<svg class="modal-form-icon" width="18" height="18">
+						<span class="modal-form__container">
+							<input type="text" class="modal-form__imput" required pattern="[a-zA-Zа-яА-ЯіІїЇ'’]+" name="user_name" />
+							<svg class="modal-form__icon" width="18" height="18">
 								<use href=".//images/sprite.svg#icon-person"></use>
 							</svg>
 						</span>
 					</lable>
-					<lable class="modal-form-field">
+					<lable class="modal-form__field">
 						Телефон
-						<span class="modal-form-container">
+						<span class="modal-form__container">
 							<input
 								type="tel"
-								class="modal-form-imput"
+								class="modal-form__imput"
 								required
 								pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
 								title="xxx-xxx-xx-xx"
 								name="user_phone"
 							/>
-							<svg class="modal-form-icon" width="18" height="18">
+							<svg class="modal-form__icon" width="18" height="18">
 								<use href=".//images/sprite.svg#icon-phone"></use>
 							</svg>
 						</span>
 					</lable>
-					<lable class="modal-form-field">
+					<lable class="modal-form__field">
 						Пошта
-						<span class="modal-form-container">
-							<input type="email" class="modal-form-imput" required name="user_mail" />
-							<svg class="modal-form-icon" width="18" height="18">
+						<span class="modal-form__container">
+							<input type="email" class="modal-form__imput" required name="user_mail" />
+							<svg class="modal-form__icon" width="18" height="18">
 								<use href=".//images/sprite.svg#icon-email"></use>
 							</svg>
 						</span>
 					</lable>
-					<lable class="modal-form-field">
+					<lable class="modal-form__field">
 						Коментар
-						<textarea name="user_massage" class="modal-form-messag" placeholder="Введіть текст"></textarea>
+						<textarea name="user_massage" class="modal-form__messag" placeholder="Введіть текст"></textarea>
 					</lable>
-					<label class="modal-form-check-field">
-						<input type="checkbox" class="modal-form-checkbox visually-hidden" required />
-						<svg class="modal-form-check" width="16" height="15">
+					<label class="modal-form__check-field">
+						<input type="checkbox" class="modal-form__checkbox visually-hidden" required />
+						<svg class="modal-form__check" width="16" height="15">
 							<use href=".//images/sprite.svg#icon-check"></use>
 						</svg>
-						<svg class="modal-form-check-activ" width="16" height="15">
+						<svg class="modal-form__check-activ" width="16" height="15">
 							<use href=".//images/sprite.svg#icon-check-activ"></use></svg
-						>Погоджуюся з розсилкою та приймаю&nbsp<a href="" class="modal-form-link">Умови договору</a>
+						>Погоджуюся з розсилкою та приймаю&nbsp<a href="" class="modal-form__link">Умови договору</a>
 					</label>
-					<button type="submit" class="modal-form-submit button">Відправити</button>
+					<button type="submit" class="modal-form__button button">Відправити</button>
 				</form>
 			</div>
 		</div>
